--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,6 +1,8 @@
 // Store here font family, colors, etc.
 @import 'colors.scss';
 @import 'news.scss';
+@import "author.scss";
+@import "modal.scss";
 // @import 'mixins.scss';
 // @import 'reset.scss';
 
@@ -19,7 +21,7 @@ html,body,#app, #app>div{
     padding: 0;
 }
 #app{
-    --nav-height:5rem;
+    --nav-height:3rem;
 }
 main{
     display: flex;
@@ -36,6 +38,6 @@ nav{
     >a{
         flex: 1;
         text-align: center;
-        // line-height: var(--nav-height);
+        line-height: var(--nav-height);
     }
 }
