todo lis functional

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,6 +3,7 @@
 @import 'news.scss';
 @import "author.scss";
 @import "modal.scss";
+@import "todo.scss";
 // @import 'mixins.scss';
 // @import 'reset.scss';
 
