--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,6 +4,7 @@
 @import "author.scss";
 @import "modal.scss";
 @import "todo.scss";
+@import "graph.scss";
 // @import 'mixins.scss';
 // @import 'reset.scss';
 
