--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,6 +12,7 @@
 
 * {
     box-shadow: 0 0 2px 0 black;
+    -webkit-overflow-scrolling: touch
 }
 html{
     font-family: $primary-font;
@@ -31,6 +32,7 @@ main{
     >div{
         // child fill the parent
         flex:1;
+        overflow: auto;
     }
 }
 nav{
