--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -6,12 +6,14 @@
     bottom:0;
     top:0;
     margin:0;
-    padding:0;
+    padding:1rem;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     .modal{
+        overflow: auto;
         margin: auto;
         background-color: white;
+        border-radius: 1rem;
     }
     overflow: auto;
 }
