--- a/sass/news.scss
+++ b/sass/news.scss
@@ -1,4 +1,7 @@
 .news{
+    >h1{
+        text-align: center;
+    }
     .newsbrief,.newsdetail{
         transition: max-height 0.3s ease;
         overflow: hidden;
@@ -9,10 +12,21 @@
     }
     .newsbrief{
         max-height: 10rem;
-        h1,h2,h3,h4{
+        >h1,>h2,>h3,>h4{
             display: inline-flex;
             padding: 0 1rem 0 0;
         }
+        .author{
+            margin: 1rem auto;
+            background-color: $clr-brand-blue;
+            color:white;
+        }
+        border: 1px solid $clr-brand-yellow;
+        border-radius: 1rem;
+        transition: all 0.3s ease;
+    }
+    .newsbrief:hover:not(:active){
+        box-shadow: inset 0 0 0 2px #e8cf00;             
     }
     .newsdetail{
         max-height: 50rem;
