--- a/sass/todo.scss
+++ b/sass/todo.scss
@@ -2,6 +2,42 @@
 .item.completed{
     opacity: 0.4;
 }
+.item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem;
+    box-shadow: 0 0 1px 1px $focus-blue-dark;
+    margin: 0.5rem 2px;
+    >*{
+        height: 1.5rem;
+        // font-size: 1.5rem;
+        line-height: 1.5rem;
+        margin: 0 0.5rem;
+    }
+    input[type="checkbox"]{
+        font-size: 1.5rem;
+    }
+    p{
+        width:100%;
+    }
+    i{
+        cursor: pointer;
+    }
+}
 .dragger{
     cursor: move;
+}
+.todolists{
+    >i{
+        &:hover{
+            cursor: pointer;
+        }
+        margin: auto 1rem auto auto;
+    }
+    >h1{
+        display: inline-block;
+        margin:0;
+        padding: 0;
+    }
 }
