--- a/sass/search.scss
+++ b/sass/search.scss
@@ -3,15 +3,15 @@
     justify-content: space-between;
     align-items: center;
     img{
-        height: 2rem;
-        width: 2rem;
-        margin: 1rem;
+        height: 0;
+        width: 0;
         transition: all 0.3s ease;
     }
     &:hover{
         img{
-            width: 0;
-            margin: 0;
+            margin: 1rem;
+            width: 2rem;
+            height: 2rem;
         }
     }
 }
